[package]
name = "moekki-calc"
version = "0.1.0"
authors = ["Mikko Kolehmainen"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.19.0"
eframe = { version = "0.19.0", features = ["persistence"] }
serde = { version = "1", features = ["derive"] } # You only need this if you want app persistence
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4.33"
web-sys = "0.3.60"
currency_rs = "1.2.0"

[profile.release]
opt-level = 2 # fast and small wasm
