[package]
name = "moekki-calc"
version = "0.1.0"
authors = ["Mikko Kolehmainen"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.22.0"
eframe = { version = "0.22.0", features = ["persistence"] }
serde = { version = "1", features = ["derive"] }
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4.37"
web-sys = "0.3.64"
currency_rs = "1.2.0"

[profile.release]
opt-level = 2 # fast and small wasm
