[package]
name = "moekki-calc"
version = "0.1.0"
authors = ["Mikko Kolehmainen"]
edition = "2021"

[dependencies]
egui = "0.22.0"
eframe = { version = "0.22.0", features = ["persistence"] }
serde = { version = "1", features = ["derive"] }
currency_rs = "1.2.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
log = "0.4.19"

[profile.release]
opt-level = 2
